--- a/package.json
+++ b/package.json
@@ -1,46 +1,25 @@
 {
   "name": "tallerai",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "type": "module",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
     "dev": "vite",
-    "build": "tsc && vite build --base=/taller.ai/",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@expo/metro-runtime": "~3.1.3",
     "@mui/material": "^7.0.2",
-    "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.17",
-    "@types/react-dom": "^18.2.0",
-    "expo": "~50.0.5",
-    "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.73.2",
-    "react-native-paper": "^5.12.1",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "~0.19.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "recharts": "^2.15.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "@types/react-native": "^0.73.0",
-    "@types/react-native-vector-icons": "^6.4.18",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.3.4",
-    "react-native-svg-transformer": "^1.5.0",
     "typescript": "^5.1.3",
     "vite": "^5.4.18"
-  },
-  "private": true
+  }
 }
