--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^7.0.2",
+    "@mui/material": "^5.15.10",
+    "@mui/icons-material": "^5.15.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.15.2"
